[package]
name = "rq"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.73"
js-sys = "0.3.50"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'MouseEvent',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'console',
  'HtmlCollection'
]

