[package]
name = "wasm-library"
version = "0.1.0"
authors = ["tpingalkar@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"
js-sys = "0.3.50"
rq = {path="../"}


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'MouseEvent',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'console',
  'HtmlCollection'
]
